refactor: update InvoiceMapperIT to use InvoiceStatus enum for status assertions